<resources>
    <string name="app_name">ProyectoASN</string>
    <string name="perfil">Perfil</string>
    <string name="cerrar_sesion">Cerrar sesión</string>

    <!-- Login y Registro -->
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="ingrese_correo_electronico">Ingrese su correo electrónico</string>
    <string name="ingrese_contrasena">Ingrese su contraseña</string>
    <string name="se_ha_olvidado_de_contrasena">Se ha olvidado de su contraseña</string>
    <string name="restaurar_contrasena">Restaurar Contraseña</string>

    <string name="registro_usuario">Registro de Usuario</string>
    <string name="correo_electronico">Correo electrónico(*)</string>
    <string name="contrasena">Contraseña(*)</string>
    <string name="confirmar_contrasena">Confirmar contraseña(*)</string>

    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="contrasenas_no_coinciden">Las contraseñas no coinciden</string>
    <string name="contrasena_muy_corta">La contraseña es muy corta.</string>
    <string name="contrasena_muy_corta_m2">La contraseña es muy corta, por favor ingrese una contraseña  igual o mayor a 8 caracteres.</string>
    <string name="revise_datos">Por favor revise sus datos, algunos son requeridos.</string>
    <string name="mensaje_de_inicio">Por favor ingresa con tu nueva cuenta.</string>

    <string name="mensajeDeReenvio">Por favor vuelva a ingresar el correo electrónico y la contraseña para confirmar sus cambios.</string>
    <string name="mensajes_campos_vacios">Por favor no deje los campos vacios.</string>
    <string name="correo_contraseña_no_coincide">El correo y contraseña no coinciden.</string>
    <string name="se_han_actualizado_datos">Se han actualizado sus datos.</string>
    <string name="texto_restablecer_contrasena">Por favor recuerda que tu correo es la única credencial para este tipo de cambios.</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="reestablecer_contrasena">Reestablecer contraseña</string>
    <string name="ingrese_su_contrasena_actual">Ingrese su contraseña actual</string>
    <string name="ingrese_su_nueva_contrasena">Ingrese su nueva contraseña</string>
    <string name="confirme_su_contrasena_nueva">Confirme su contraseña nueva</string>
    <string name="info_reestablecer_contrasena">A su correo le llegará un link el cual le permitirá reestablecer su contraseña al seleccionar ACEPTAR.</string>
    <string name="hay_un_error_actualizar_contra">Hay un error en la actualización, por favor intentarlo de nuevo.</string>
    <string name="las_contrasena_actual_no_coincide">La contraseña actual no es la correcta.</string>
    <string name="a_ocurrido_un_error">A ocurrido un error, por favor intentalo de nuevo.</string>
    <string name="se_le_ha_enviado_un_correo">Se le ha enviado un correo para restablecer su contraseña, por favor espere a que este llegue.</string>
    <string name="a_ocurrido_un_error_afuera">A ocurrido un error, revise si el correo escrito si ha estado registrado.</string>
    <string name="la_contrasena_no_coincide">La contraseña no coincide</string>
    <string name="campos_vacios">Algunos o todos los campos estan vacios</string>
    <string name="cambio_de_contrasena_exito">se ha cambiado su contraseña con éxito</string>
    <string name="welcome">Bienvenido</string>
    <string name="el_usuario_no_registrado">El correo y la contraseña no coincide, o el usuario no está registrado.</string>
    <string name="este_valor_requerido">Este campo es requerido.</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="registrar">Registrar</string>
    <string name="actualizar">Actualizar</string>
    <string name="actualizar_contrasena">Actualizar o reinciar contraseña.</string>
    <string name="todo">Todo</string>
    <string name="error_video">Error al obtener el vídeo.</string>
    <string name="califica_video">¿Como te sientes después de ver el video?.</string>
    <string name="ingrese_el_nombre_de_la_clase">Ingrese el nombre del curso</string>
    <string name="ingrese_el_nombre_del_alumno">Ingrese el nombre del alumno</string>
    <string name="agregar">Agregar</string>
    <string name="agregado_clase">Se ha agregado la curso</string>
    <string name="vacio_nombre_clase">Está vacio el campo del nombre del curso</string>
    <string name="editado_clase">Se ha editado el curso</string>
    <string name="eliminar_curso">Eliminar Curso</string>
    <string name="pregunta_eliminar_curso">¿Quieres eliminar este curso?</string>
    <string name="pregunta_eliminar_alumno">¿Quieres eliminar este alumno?</string>
    <string name="afirmacion_eliminado_curso">Se ha eliminado el curso</string>
    <string name="Ingrese_el_apellido_del_alumno">Ingrese el apellido del alumno</string>
    <string name="agregado_alumno">Se ha agregado al alumno</string>
    <string name="vacios_campos">Está vacio alguno de los campos</string>
    <string name="puntuacion_en_el_test">Puntuacion en el test: </string>
    <string name="test_no_realizado">Test no realizado</string>
    <string name="realizar_test">Realizar Test</string>
    <string name="editado_alumno">Se ha editado el alumno</string>
    <string name="afirmacion_eliminado_alumno">Se ha eliminado el alumno</string>

</resources>
